# hustle

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  Makefile  NOTES  PKGBUILD  README.md  rustfmt.toml
benches/: benchmark.rs
data/: answer_words2  bank1.csv  bank2.csv  config.toml  gdata.csv  guess_words  guess_words2  happrox.csv  hdata.csv  hinfs.csv  lbs.csv  ldata.csv  out
extra/: PKGBUILD
extra/manpages/: hustle-gen.1  hustle-ggen.man  hustle-hgen.man  hustle-lgen.1  hustle-play.1  hustle-play.man  hustle-solve.1  hustle-solve.man  hustle.1  hustle.man
scripts/: analyze_tot.py  frequency.py  make_heuristic.py  make_lbounds.py
src/: README.md  analysis.py  analysis.rs  command.rs  ds.rs  game.rs  lib.rs  main.rs  solve.rs
src/analysis/: gen.rs  generator.rs  ggen.rs  hdata.rs  lgen.rs  mod.rs  range.rs
src/data/: diff12  diff23  happrox.csv  hdata.csv  hdata2.csv  heuristic.csv  out1  out2  out3
src/game/: config.rs  editview.rs  end.rs  fbcol.rs  game.rs  gameio.rs  gameview.rs  hselectview.rs  menu.rs  mod.rs  play.rs
src/solve/: adata.rs  analysis.rs  autofbmap.rs  cache.rs  gen.rs  hdata.rs  mod.rs  multistate.rs  solvecommand.rs  state.rs  util.rs
src/util/: dtree.rs  feedback.rs  misc.rs  mod.rs  quickselect.rs  range.rs  select.rs  wbank.rs  word.rs
toml-loader/: Cargo.toml
toml_loader/: Cargo.toml
toml_loader/src/: lib.rs
