[package]
name = "hustle"
version = "1.2.4"
description = """
Hustle is a terminal-based wordle clone and wordle solver written in
rust, and geared towards speedrunning.
"""
categories = ["games"]
keywords = ["wordle", "tui"]
documentation = "https://github.com/lennonokun/hustle"
homepage = "https://github.com/lennonokun/hustle"
repository = "https://github.com/lennonokun/hustle"
readme = "README.md"
license = "MIT"
edition = "2021"

[profile.release]
opt-level = 3

[dependencies]
rayon = "1.5.3"
rand = "0.8.5"
cursive = "0.18"
clap = {version="3.2.7", features=["derive"]}
serde = {version="1.0.139", features=["derive"]}
toml = "0.5.3"
lazy_static = "1.4.0"
toml-loader = { version = "0.1.0", path = "toml-loader" }
# log = "0.4"

[[bin]]
name = "hustle"
