[package]
name = "hustle"
version = "1.3.0"
description = """
Hustle is a terminal-based wordle clone and wordle solver written in
rust, and geared towards speedrunning.
"""
categories = ["games"]
keywords = ["wordle", "tui"]
documentation = "https://github.com/lennonokun/hustle"
homepage = "https://github.com/lennonokun/hustle"
repository = "https://github.com/lennonokun/hustle"
readme = "README.md"
license = "MIT"
edition = "2021"

[profile.release]
opt-level = 3

[dependencies]
rayon = "1.5.3"
rand = "0.8.5"
cursive = {version="0.18", features=["termion-backend"]}
clap = {version="3.2.7", features=["derive"]}
serde = {version="1.0.139", features=["derive"]}
lazy_static = "1.4.0"
config = {version="0.13.1", features=["toml", "preserve_order"], default-features=false}
indexmap = "1.9.1"
# log = "0.4"

[[bin]]
name = "hustle"
