[package]
name = "hustle"
version = "1.3.1"
description = """
Hustle is a terminal-based wordle clone and wordle solver written in
rust, and geared towards speedrunning.
"""
categories = ["games"]
keywords = ["wordle", "tui"]
documentation = "https://github.com/lennonokun/hustle"
homepage = "https://github.com/lennonokun/hustle"
repository = "https://github.com/lennonokun/hustle"
readme = "README.md"
license = "MIT"
edition = "2021"

[features]
default = []
play = ["dep:cursive", "dep:serde", "dep:indexmap", "dep:config"]
solve = ["dep:rayon"]
gen = ["solve"]

[dependencies]
clap = {version="3.2.7", features=["derive"]}
rayon = {version="1.5.3", optional=true}
indexmap = {version="1.9.1", optional=true}
lazy_static = "1.4.0"
rand = "0.8.5"
regex = "1.6.0"

[dependencies.serde]
version="1.0.139"
features=["derive"]
optional=true

[dependencies.cursive]
version="0.18"
features=["termion-backend"]
optional=true

[dependencies.config]
version="0.13.1"
default-features=false
features=["toml", "preserve_order"]
optional=true

[dev-dependencies]
criterion = "0.3.6"

[[bench]]
name = "benchmark"
harness = false

[[bin]]
name = "hustle"
